fix: Change max/min width for overflow check

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -165,6 +165,7 @@ body {
 
 .nav__link {
   display: block;
+  max-width: 300px;
   padding: 14px 10px;
   font-size: 20px;
   line-height: 24px;
@@ -287,7 +288,9 @@ body {
 
 /* Button */
 .button {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   padding: 8px 5px;
   font-family: inherit;
   font-size: 16px;
@@ -628,6 +631,7 @@ body {
 
 .subscribe__input {
   width: 100%;
+  min-width: 452px;
   height: 100%;
   padding: 0 20px;
   border-radius: 4px 0 0 4px;
@@ -650,7 +654,7 @@ body {
   flex-shrink: 0;
   flex-wrap: wrap;
   row-gap: 8px;
-  max-width: 240px;
+  max-width: 192px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -818,6 +822,7 @@ body {
 .modal-search__title {
   margin: 0;
   margin-bottom: 64px;
+  padding-right: 50px;
   font-family: inherit;
   font-size: 30px;
   line-height: 36px;
@@ -1089,7 +1094,6 @@ body {
 .main__breadcrumbs {
   display: flex;
   flex-wrap: wrap;
-  row-gap: 8px;
   align-items: center;
   margin: 0 0 8px -5px;
   padding: 0;
@@ -1169,6 +1173,7 @@ body {
 .filter__form-fieldset--options,
 .filter__form-fieldset--housing {
   min-width: 150px;
+  max-width: 185px;
 }
 
 .filter__form-fieldset--housing {
@@ -1200,7 +1205,6 @@ body {
 }
 
 .filter__form-label {
-  width: max-content;
   line-height: 23px;
 }
 
@@ -1215,6 +1219,7 @@ body {
 
 .check__input,
 .radio__input {
+  flex-shrink: 0;
   width: 20px;
   height: 20px;
   margin: 0;
